# python-pdf-text-extractor

./: .env_template  README.md  makefile  pyproject.toml
app/: celery_app.py  celery_tasks.py  extractor.py  main.py
